Boost should now be accessible part 2

--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
-    <p>
-    This is a clone. Play the original <a href="http://asherv.com/threes/" target="_blank">here!</a>
-    </p>
+    <div id="starting-boost-container"></div>
+    <a href="http://asherv.com/threes/" target="_blank">Play the original</a>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
